# HumanoidRobot-Arm

./: .gitignore  AGENTS.md  Untitled-1.txt  dh_parameters.md  gazebo仿真方案.md  上下位机通讯规范.md  上位机项目规划书.md  项目结构说明书.md
scripts/: integration_test.py  pose_visualizer.py
upper_computer_ws/: .gitignore
upper_computer_ws/src/humanoid_arm_communication/: package.xml  setup.cfg  setup.py
upper_computer_ws/src/humanoid_arm_communication/config/: communication.yaml
upper_computer_ws/src/humanoid_arm_communication/humanoid_arm_communication/: __init__.py  command_codec.py  communication_node.py  crc.py  feedback_codec.py  frame_parser.py  protocol.py  reconnect_manager.py  serial_transport.py  unit_converter.py
upper_computer_ws/src/humanoid_arm_communication/launch/: communication.launch.py  hardware_check.launch.py
upper_computer_ws/src/humanoid_arm_communication/test/: run_e2e.py  test_command_codec.py  test_crc.py  test_feedback_codec.py  test_frame_parser.py  test_reconnect_manager.py
upper_computer_ws/src/humanoid_arm_description/: CMakeLists.txt  README.md  package.xml
upper_computer_ws/src/humanoid_arm_description/config/: humanoid_arm.rviz  joint_state_publisher.yaml  simulation.yaml
upper_computer_ws/src/humanoid_arm_description/launch/: gazebo_camera_follow.launch.py  rviz_joint_control.launch.py
upper_computer_ws/src/humanoid_arm_description/scripts/: tip_position_gui.py
upper_computer_ws/src/humanoid_arm_description/src/: gazebo_joint_driver.cpp
upper_computer_ws/src/humanoid_arm_description/test/: test_zero_pose_geometry.py
upper_computer_ws/src/humanoid_arm_description/urdf/: humanoid_arm.urdf
upper_computer_ws/src/humanoid_arm_description/worlds/: empty.world
upper_computer_ws/src/humanoid_arm_kinematics/: README.md  package.xml  setup.cfg  setup.py
upper_computer_ws/src/humanoid_arm_kinematics/config/: joint_limits.yaml  kinematics.yaml
upper_computer_ws/src/humanoid_arm_kinematics/humanoid_arm_kinematics/: __init__.py  forward_solver.py  inverse_solver.py  jacobian.py  kinematics_node.py  robot_model.py  solution_policy.py  solution_selector.py  solution_validator.py  target_shaper.py  workspace_guard.py
upper_computer_ws/src/humanoid_arm_kinematics/launch/: kinematics.launch.py  rviz_kinematics.launch.py
upper_computer_ws/src/humanoid_arm_kinematics/test/: test_forward_solver.py  test_inverse_solver.py  test_solution_policy.py  test_solution_validator.py  test_target_shaper.py
upper_computer_ws/src/humanoid_arm_runtime/: README.md  package.xml  setup.cfg  setup.py
upper_computer_ws/src/humanoid_arm_runtime/config/: runtime.yaml  vision_kinematics.rviz
upper_computer_ws/src/humanoid_arm_runtime/humanoid_arm_runtime/: __init__.py  baseline_manager.py  diagnostics.py  follow_mapper.py  runtime_node.py  safety_manager.py  state_machine.py  system_context.py  task_projector.py  watchdog.py
upper_computer_ws/src/humanoid_arm_runtime/launch/: rviz_vision_kinematics.launch.py  simulation.launch.py  system.launch.py
upper_computer_ws/src/humanoid_arm_runtime/test/: run_sim.py  test_follow_mapper.py  test_safety_manager.py  test_state_machine.py  test_task_projector.py  test_watchdog.py
upper_computer_ws/src/humanoid_arm_vision/: CALIBRATION.md  README.md  TESTING.md  package.xml  setup.cfg  setup.py
upper_computer_ws/src/humanoid_arm_vision/config/: vision.yaml
upper_computer_ws/src/humanoid_arm_vision/humanoid_arm_vision/: __init__.py  apriltag_detector.py  camera_calibration.py  camera_driver.py  pose_filter.py  pose_solver.py  quality_gate.py  transform_utils.py  vision_node.py  wall_frame_calibrator.py
upper_computer_ws/src/humanoid_arm_vision/launch/: vision.launch.py
upper_computer_ws/src/humanoid_arm_vision/test/: test_apriltag_detector.py  test_camera_calibration.py  test_camera_driver.py  test_pose_filter.py  test_pose_solver.py  test_quality_gate.py  test_transform_utils.py  test_wall_frame_calibrator.py
