<?xml version="1.0"?>
<package format="3">
  <name>humanoid_arm_description</name>
  <version>0.1.0</version>
  <description>URDF, RViz joint-control demo, and Gazebo Classic model for the 4-DOF humanoid arm.</description>

  <maintainer email="dev@humanoid-arm.local">HumanoidRobot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>humanoid_arm_kinematics</exec_depend>
  <exec_depend>humanoid_arm_runtime</exec_depend>
  <exec_depend>humanoid_arm_vision</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
